{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 26,
  "lineage": "436e2d91-8fb0-0097-8c9e-b94ff6ff9441",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ms_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a03da5844d26696",
            "domain": "vpc",
            "id": "eipalloc-03a03da5844d26696",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-1-235.compute-1.amazonaws.com",
            "public_ip": "23.21.1.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ms_application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0070c5311b7677678",
            "arn": "arn:aws:ec2:us-east-1:636110217222:instance/i-0054da004f136abc0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0054da004f136abc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "some_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0e29e995564ad2d",
            "private_dns": "ip-10-0-2-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aae5e1e6a226e84e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05849cee4d7c641cb",
            "tags": {
              "Name": "ms_application"
            },
            "tags_all": {
              "Name": "ms_application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05653e7b9bfd56319"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.allow_ssh_and_port_3000",
            "aws_subnet.ms_private_1",
            "aws_vpc.ms_vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.ms_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ms_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0070c5311b7677678",
            "arn": "arn:aws:ec2:us-east-1:636110217222:instance/i-01b726b8231aede1d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b726b8231aede1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099a10f6a20c9b07e",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_ip": "174.129.60.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f25ee1593465260",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015651f83e6535c33",
            "tags": {
              "Name": "ms_bastion"
            },
            "tags_all": {
              "Name": "ms_bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b2e1fa2cdbb7de3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ms_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:internet-gateway/igw-0b770f968d2489e93",
            "id": "igw-0b770f968d2489e93",
            "owner_id": "636110217222",
            "tags": {
              "Name": "ms_internet_gateway"
            },
            "tags_all": {
              "Name": "ms_internet_gateway"
            },
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ms_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a03da5844d26696",
            "connectivity_type": "public",
            "id": "nat-0f502bdcc397eaa4e",
            "network_interface_id": "eni-0c714d8baad2f190b",
            "private_ip": "10.0.1.7",
            "public_ip": "23.21.1.235",
            "subnet_id": "subnet-015651f83e6535c33"
          },
          "dependencies": [
            "aws_eip.ms_eip",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:route-table/rtb-090b16183e907e455",
            "id": "rtb-090b16183e907e455",
            "owner_id": "636110217222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f502bdcc397eaa4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_router"
            },
            "tags_all": {
              "Name": "private_router"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ms_eip",
            "aws_nat_gateway.ms_nat",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:route-table/rtb-0fbb1e0211da67d5c",
            "id": "rtb-0fbb1e0211da67d5c",
            "owner_id": "636110217222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b770f968d2489e93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_router"
            },
            "tags_all": {
              "Name": "public_router"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ms_internet_gateway",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ms_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0150210efbe1e3be8",
            "route_table_id": "rtb-090b16183e907e455",
            "subnet_id": "subnet-05849cee4d7c641cb"
          },
          "dependencies": [
            "aws_eip.ms_eip",
            "aws_nat_gateway.ms_nat",
            "aws_route_table.private_router",
            "aws_subnet.ms_private_1",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ms_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2172b92e9d5bc6a",
            "route_table_id": "rtb-090b16183e907e455",
            "subnet_id": "subnet-0ac20d84a762aba17"
          },
          "dependencies": [
            "aws_eip.ms_eip",
            "aws_nat_gateway.ms_nat",
            "aws_route_table.private_router",
            "aws_subnet.ms_private_2",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ms_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7f50ac759e4503",
            "route_table_id": "rtb-0fbb1e0211da67d5c",
            "subnet_id": "subnet-015651f83e6535c33"
          },
          "dependencies": [
            "aws_internet_gateway.ms_internet_gateway",
            "aws_route_table.public_router",
            "aws_subnet.ms_public_1",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ms_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fadfec4595b2b8a5",
            "route_table_id": "rtb-0fbb1e0211da67d5c",
            "subnet_id": "subnet-03ab54202d169bd83"
          },
          "dependencies": [
            "aws_internet_gateway.ms_internet_gateway",
            "aws_route_table.public_router",
            "aws_subnet.ms_public_2",
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:security-group/sg-05b2e1fa2cdbb7de3",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b2e1fa2cdbb7de3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "636110217222",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_and_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:security-group/sg-05653e7b9bfd56319",
            "description": "Allow ssh and port 3000 from vpc cidr only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05653e7b9bfd56319",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_and_port_3000",
            "name_prefix": "",
            "owner_id": "636110217222",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ms_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:subnet/subnet-05849cee4d7c641cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05849cee4d7c641cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636110217222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ms_private_1"
            },
            "tags_all": {
              "Name": "ms_private_1"
            },
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ms_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:subnet/subnet-0ac20d84a762aba17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac20d84a762aba17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636110217222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ms_private_2"
            },
            "tags_all": {
              "Name": "ms_private_2"
            },
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ms_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:subnet/subnet-015651f83e6535c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015651f83e6535c33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636110217222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ms_public_1"
            },
            "tags_all": {
              "Name": "ms_public_1"
            },
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ms_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:subnet/subnet-03ab54202d169bd83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab54202d169bd83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636110217222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ms_public_2"
            },
            "tags_all": {
              "Name": "ms_public_2"
            },
            "vpc_id": "vpc-07a0e6116c84be57b"
          },
          "dependencies": [
            "aws_vpc.ms_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ms_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636110217222:vpc/vpc-07a0e6116c84be57b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e2d7fab528872e9",
            "default_route_table_id": "rtb-070d38c9240d9ec5f",
            "default_security_group_id": "sg-0278c7d889294e722",
            "dhcp_options_id": "dopt-029a4852bfa5d7ab9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-07a0e6116c84be57b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070d38c9240d9ec5f",
            "owner_id": "636110217222",
            "tags": {
              "Name": "ms_vpc"
            },
            "tags_all": {
              "Name": "ms_vpc"
            }
          }
        }
      ]
    }
  ]
}